fix(landing): align the discord button correctly

--- a/src/app/core/landing-card/landing-card.component.scss
+++ b/src/app/core/landing-card/landing-card.component.scss
@@ -30,7 +30,7 @@ mat-card-content {
 
     a,
     button {
-      width: 220px;
+      min-width: 220px;
     }
   }
 }
